@@ -1,3 +1,13 @@
+2007-03-24  Vitaly Alexeev <tishka92@yahoo.com>
+	
+	* gameswf/gameswf_action.cpp: added \n in log_msg()
+	* gameswf/gameswf_sound_handler.(cpp,h): fixed bug leading to
+	infinite playing of sound
+	* gameswf/gameswf_shape.cpp: there are problems with NEW TESSELATOR:
+	because "#define USE_NEW_TESSELATOR" is commented
+	* gameswf/gameswf_movie_def.cpp: removed ifdef USE_SEPARATE_THREAD
+	
+
 2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
 	
 	* gameswf/gameswf_movie_def.cpp: added ifdef USE_SEPARATE_THREAD,
